# pyopticalpuf

./: ._Examples  ._OPUFToolkit  .gitignore  README.md  pyproject.toml
Examples/: 0 - Algorithm choice.py  1 - Calculating fingerprints.py  2 - Calculating metrics.py  3 - NIST randomness testing.py  4 - Time series testing.py  AdvancedCustomFingerprintingAlgorithm.py  plottingDistributions.py  proper_image_resolution.py
example output/: nistResults.csv
pyOpticalPUF/: ._FingerprintingAlgorithms  Display.py  Distributions.py  HammingDistanceCalculators.py  Metrics.py  NIST.py  Utility.py  __init__.py
pyOpticalPUF/Fingerprinting/: AHB.py  FingerprintAlgorithm.py  LBP.py  Otsu.py  Sauvola.py  __init__.py
