[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "pyOpticalPUF"
version = "0.0.1"
authors = [
  { name="Ella Mann-Andrews", email="e.mann-andrews@lancaster.ac.uk" },
  { name="Blake Halliday", email="halliday_blake@outlook.com"},
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "matplotlib",
    "nistrng",
    "tqdm",
    "colorama",
    "opencv-python"
]
keywords = ["PUF", "Image processing"]

[project.urls]
Homepage = "https://github.com/ellaandr/pyopticalpuf"
Issues = "https://github.com/ellaandr/pyopticalpuf/issues"